/**
 * @Author: zjj
 * @Date: 2025/11/12
 * @Desc:
**/

syntax = "proto3";

package pb3;

option go_package = "server/internal/protocol";

enum SkillTargetType {
    SkillTargetTypeNil = 0;

    SkillTargetTypeSingle = 1;// 单体指向性
    SkillTargetTypeAOE = 2;// AOE范围
    SkillTargetTypeSelf = 3;// 自身
}

enum SkillResultType {
    SkillResultTypeNil = 0;
    SkillResultTypeDamage = 1;// 造成伤害
    SkillResultTypeHeal = 2;// 治疗
    SkillResultTypeAddBuff = 3;// 添加Buff
    SkillResultTypeRemoveBuff = 4;// 移除Buff
}

enum SkillUseErr {
    SkillUseErrSuccess = 0;
    ErrSkillNotLearned       = 1;// 未学习
    ErrSkillInCooldown       = 2;// CD中
    ErrSkillGroupCooldown    = 3;// 公共CD中
    ErrSkillCasting          = 4;// 正在施法
    ErrSkillTargetTooFar     = 5;// 目标过远
    ErrSkillTargetInvalId    = 6;// 目标无效
    ErrSkillTargetDead       = 7;// 目标已死亡
    ErrSkillTargetInvincible = 8;// 目标无敌
    ErrSkillCannotCast       = 9;// 无法释放
    ErrSkillNotEnoughMP      = 10;// 魔法值不足
}

message SkillHitResult {
    uint64 target_hdl   = 1;
    bool is_hit         = 2;
    bool is_dodge       = 3;
    bool is_crit        = 4;
    int64 damage        = 5;
    int64 heal          = 6;
    repeated uint32 added_buffs = 7;
    SkillResultType result_type = 8;
    uint64 damage_flags = 9;
}

message SkillCastResult {
    bool success = 1;
    SkillUseErr err_code = 2;
    repeated SkillHitResult hits = 3;
}